--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "deploy": "npm run build && gh-pages -d SpotifyPlaylistParser"
+    "start": "node ./server.js"
   },
   "keywords": [],
   "author": "",
